--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
   <div id="particles"></div>
 
   <div class="button-panel">
-    <button class="btn">&#x200B;P&#x200B;&#x200B;r&#x200B;o&#x200B;&#x200B;&#x200B;&#x200B;&#x200B;x&#x200B;y&#x200B;&#x200B;</button>
+    <button class="btn">Ploxys</button>
     <button class="btn">Games</button>
   </div>
   
