--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
   <div id="particles"></div>
 
   <div class="button-panel">
-    <button class="btn">Ploxys</button>
+    <button class="btn">Browsers</button>
     <button class="btn">Games</button>
   </div>
   
