--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       margin: 0;
     }
     body {
-      background: url("https://vlixol.github.io/Incog/incognito.png") no-repeat center center fixed;
+      background: url("https://vlixol.github.io/Incog/incogtino.png") no-repeat center center fixed;
       background-size: cover;
       font-family: Arial, sans-serif;
       overflow: hidden;
